<resources>
    <string name="app_name">NotesApplication</string>
    <string name="application_name">Application</string>
    <string name="onboarding_button">Discover the platform</string>
    <string name="account_ask">You have an account?</string>
    <string name="log_in">Log-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="return_to_sign_up">Return to Sign-Up</string>
    <string name="title_note">Title Note</string>
    <string name="message_note">Message Note</string>
    <string name="date_note">13/12/2023</string>
    <string name="all_notes">All notes</string>
    <string name="add_new">Add new</string>
    <string name="logout">Logout</string>
    <string name="back_button">Back</string>
    <string name="add_note">Add note</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="title_too_big">Title more than 20 symbols</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="skip_button">Skip</string>
    <string name="onboarding_step_1_text">Find projects from companies everywhere in the world</string>
    <string name="onboarding_step_2_text">Work hard and level up!</string>
    <string name="onboarding_step_3_text">Enjoy your progress!</string>
    <string name="delete">Delete</string>
    <string name="edit_title">Edit title</string>
    <string name="edit_message">Edit message</string>


</resources>