<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="@dimen/dp100"
        android:layout_marginEnd="@dimen/dp24"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/sign_up"
            style="@style/title_sign_log" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/input_style"
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/input_style"
                android:id="@+id/second_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/input_style"
                android:id="@+id/email_edit_text"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/input_style"
                android:id="@+id/password_edit_text"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="@style/button_style"
        android:layout_marginBottom="@dimen/dp140"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/account_ask"
            style="@style/description_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_ask" />

        <TextView
            android:id="@+id/login_ask"
            style="@style/log_in_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp12"
            android:text="@string/log_in" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>