<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp8">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginTop="@dimen/dp8"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/title_note"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:lines="2"
        android:ellipsize="end"
        android:text="@string/message_note"
        tools:text="dqwbfjekbfjewhbfjhwqbfjhbqjh dwq fwf fdwqfwef fwf fbejh fbjwhqbfj bqbfjhbqwfjb jhbjhwqbjhfbwjhbfjhwb jhbfwjbwj hbjfwbjhbfwejb jhwbfjbwefbwefjbfjbqw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:layout_marginEnd="@dimen/dp8"
        android:text="@string/date_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>