<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoggingActivity">
    <LinearLayout
        android:id="@+id/sign_up_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="420dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/log_in_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/log_in"
            android:textSize="27sp">

        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:textSize="16sp"
            android:hint="@string/email">

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="16sp"
            android:hint="@string/password">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="156dp"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textAllCaps="false"
        >

    </Button>
        <TextView
            android:id="@+id/return_to_signing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="94dp"
            android:fontFamily="sans-serif-medium"
            android:padding="5dp"
            android:text="@string/return_to_sign"
            android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>